// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`test ImageDisplay should render correctly with img 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="img-container"
    >
      <img
        src="test-url"
      />
    </div>
    <div
      class="zoom-block"
    >
      <button
        type="button"
      >
        <svgr-url
          class="icon"
          height="24"
          width="24"
        />
      </button>
      <button>
        Reset View
      </button>
      <button
        type="button"
      >
        <svgr-url
          class="icon"
          height="24"
          width="24"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`test ImageDisplay should render correctly with img 2`] = `
<div>
  <div
    class="container"
  >
    <div
      class="img-container"
    >
      <svg
        height="0"
        viewBox="0 0 0 0"
        width="0"
      >
        <image
          height="0"
          href="test-url"
          width="0"
        />
        <div>
          mock-render-contents
        </div>
      </svg>
    </div>
    <div
      class="zoom-block"
    >
      <button
        type="button"
      >
        <svgr-url
          class="icon"
          height="24"
          width="24"
        />
      </button>
      <button>
        Reset View
      </button>
      <button
        type="button"
      >
        <svgr-url
          class="icon"
          height="24"
          width="24"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`test ImageDisplay should render correctly without img 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="img-container"
    >
      <div
        aria-busy="true"
        aria-live="polite"
        class="ant-spin ant-spin-spinning spin css-dev-only-do-not-override-hash"
      >
        <span
          aria-label="loading"
          class="anticon anticon-loading anticon-spin spinner ant-spin-dot"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="loading"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="zoom-block"
    >
      <button
        type="button"
      >
        <svgr-url
          class="icon"
          height="24"
          width="24"
        />
      </button>
      <button>
        Reset View
      </button>
      <button
        type="button"
      >
        <svgr-url
          class="icon"
          height="24"
          width="24"
        />
      </button>
    </div>
  </div>
</div>
`;
